tests/typechecker/should_fail/type_annotations_19.csp
c :: Bool=>Event
channel c
